Try out GitHub pages

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ starboard:
   plugins:
     - src: "http://localhost:8080/index.js"
       async: true
+    - src: "https://stefnotch.github.io/starboard-mathlive/index.js"
+      async: true
 ---
 
 
